chore: Unused object removed
